@@ -118,7 +118,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -161,10 +161,9 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
-
 				),
 				metadata1
 		);
@@ -180,7 +179,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -233,7 +232,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -251,7 +250,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -316,7 +315,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -364,7 +363,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -406,7 +405,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -424,7 +423,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -433,7 +432,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex3");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -484,7 +483,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230123")),
+						List.of("01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -502,7 +501,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122")),
+						List.of("01230122"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -511,7 +510,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex5");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
 		NeighbourSubscription sub = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
@@ -545,7 +544,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -586,7 +585,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -604,7 +603,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"SE",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -613,7 +612,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex8");
 
 		ServiceProvider sp = new ServiceProvider("sp");
-		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, new HashSet<>(Arrays.asList(cap1, cap2))));
+		sp.setCapabilities(new Capabilities(Capabilities.CapabilitiesStatus.KNOWN, Set.of(cap1, cap2)));
 
 		NeighbourSubscription sub1 = new NeighbourSubscription("(quadTree like '%,01230123%' OR quadTree like '%,01230122%') " +
 				"AND publicationType = 'RoadBlock' " +
@@ -655,7 +654,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -708,7 +707,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"1.0",
-						new HashSet<>(Arrays.asList("01230122", "01230123")),
+						List.of("01230122", "01230123"),
 						"RoadBlock",
 						"publisherName"
 				),
@@ -765,8 +764,8 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"pub-1",
 						"NO",
 						"DENM:1.2.2",
-						new HashSet<>(Arrays.asList("12004")),
-						new HashSet<>(Arrays.asList(6))
+						List.of("12004"),
+						List.of(6)
 				),
 				metadata
 		);
@@ -1047,8 +1046,8 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"NO0000:001",
 						"NO",
 						"1.0",
-						Collections.singleton("0122"),
-						Collections.singleton(1)
+						List.of("0122"),
+						List.of(1)
 				),
 				new Metadata(RedirectStatus.NOT_AVAILABLE)
 		);
