@@ -31,10 +31,7 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 
 import javax.net.ssl.SSLContext;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.UUID;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
@@ -110,8 +107,8 @@ public class RoutingConfigurerQpidRestartIT extends QpidDockerBaseIT {
                         "pub-1",
                         "NO",
                         "1.2.2",
-                        new HashSet<>(Arrays.asList("0123")),
-                        new HashSet<>(Arrays.asList(5))
+                        List.of("0123"),
+                        List.of(5)
                 ),
                 metadata
         );
@@ -155,8 +152,8 @@ public class RoutingConfigurerQpidRestartIT extends QpidDockerBaseIT {
                         "pub-1",
                         "NO",
                         "1.2.2",
-                        new HashSet<>(Arrays.asList("0123")),
-                        new HashSet<>(Arrays.asList(5))
+                        List.of("0123"),
+                        List.of(5)
                 ),
                 metadata
         );
